Remove is_boosted field from Events
